// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load empty documents are filtered out 1`] = `
Array [
  Object {
    "doc": 1,
  },
  "str_doc",
  "",
  0,
  Object {
    "doc": 2,
  },
]
`;

exports[`load from file 1`] = `
Array [
  Object {
    "hello": 1234,
    "world": 111,
  },
  Object {
    "foo": Array [
      "bar",
      "zoo",
      "goo",
    ],
  },
  Array [
    "hello",
    "world",
  ],
]
`;

exports[`load from url 1`] = `
Array [
  Object {
    "": Object {
      "": Object {
        "": Object {
          "": Object {
            "true, &quot;sdkKey&quot;": Object {
              "": Object {
                "false, &quot;accountId&quot;": Object {
                  "": null,
                  ", &quot;events&quot;": Array [
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                    Object {
                      "": null,
                      "[]": null,
                    },
                  ],
                },
              },
              ", &quot;attributes&quot;": Array [
                Object {
                  "": null,
                },
                Object {
                  "": null,
                },
                Object {
                  "": null,
                },
                Object {
                  "": null,
                },
                Object {
                  "": null,
                },
                Object {
                  "": null,
                },
                Object {
                  "": null,
                },
                Object {
                  "": null,
                },
              ],
            },
          },
          ", &quot;audiences&quot;": Array [
            Object {
              "": null,
              "Audience for Backwards Compatibility&quot;": null,
              "[
  \\\\&quot;or\\\\&quot;,
  {
      \\\\&quot;match\\\\&quot;: \\\\&quot;exact\\\\&quot;,
      \\\\&quot;name\\\\&quot;: \\\\&quot;$opt_dummy_attribute\\\\&quot;,
      \\\\&quot;type\\\\&quot;: \\\\&quot;custom_attribute\\\\&quot;,
      \\\\&quot;value\\\\&quot;: \\\\&quot;$opt_dummy_value\\\\&quot;
    }
]": null,
            },
          ],
        },
        ", &quot;variables&quot;": Array [],
      },
      ", &quot;rollouts&quot;": Array [],
    },
    "<!DOCTYPE html> <html lang=\\"en\\" data-color-mode=\\"auto\\" data-light-theme=\\"light\\" data-dark-theme=\\"dark\\" data-a11y-animated-images=\\"system\\"> <head> <meta charset=\\"utf-8\\"> <link rel=\\"dns-prefetch\\" href=\\"https://github.githubassets.com\\"> <link rel=\\"dns-prefetch\\" href=\\"https://avatars.githubusercontent.com\\"> <link rel=\\"dns-prefetch\\" href=\\"https://github-cloud.s3.amazonaws.com\\"> <link rel=\\"dns-prefetch\\" href=\\"https://user-images.githubusercontent.com/\\"> <link rel=\\"preconnect\\" href=\\"https://github.githubassets.com\\" crossorigin> <link rel=\\"preconnect\\" href=\\"https://avatars.githubusercontent.com\\">


<link crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" href=\\"https://github.githubassets.com/assets/light-0946cdc16f15.css\\" /><link crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" href=\\"https://github.githubassets.com/assets/dark-3946c959759a.css\\" /><link data-color-theme=\\"dark_dimmed\\" crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" data-href=\\"https://github.githubassets.com/assets/dark_dimmed-9b9a8c91acc5.css\\" /><link data-color-theme=\\"dark_high_contrast\\" crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" data-href=\\"https://github.githubassets.com/assets/dark_high_contrast-11302a585e33.css\\" /><link data-color-theme=\\"dark_colorblind\\" crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" data-href=\\"https://github.githubassets.com/assets/dark_colorblind-1a4564ab0fbf.css\\" /><link data-color-theme=\\"light_colorblind\\" crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" data-href=\\"https://github.githubassets.com/assets/light_colorblind-12a8b2aa9101.css\\" /><link data-color-theme=\\"light_high_contrast\\" crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" data-href=\\"https://github.githubassets.com/assets/light_high_contrast-5924a648f3e7.css\\" /><link data-color-theme=\\"light_tritanopia\\" crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" data-href=\\"https://github.githubassets.com/assets/light_tritanopia-05358496cb79.css\\" /><link data-color-theme=\\"dark_tritanopia\\" crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" data-href=\\"https://github.githubassets.com/assets/dark_tritanopia-aad6b801a158.css\\" /> <link crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" href=\\"https://github.githubassets.com/assets/primer-primitives-fb1d51d1ef66.css\\" /> <link crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" href=\\"https://github.githubassets.com/assets/primer-57c312e484b2.css\\" /> <link crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" href=\\"https://github.githubassets.com/assets/global-0d04dfcdc794.css\\" /> <link crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" href=\\"https://github.githubassets.com/assets/github-c7a3a0ac71d4.css\\" /> <link crossorigin=\\"anonymous\\" media=\\"all\\" rel=\\"stylesheet\\" href=\\"https://github.githubassets.com/assets/code-536dffbfff5a.css\\" />
<meta name=\\"optimizely-datafile\\" content=\\"{&quot;groups&quot;": Array [],
  },
]
`;

exports[`multi-line text block with long line keep line break 1`] = `
"foo: |-
  [section]
      abc: s
      def: 012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
bar: something
"
`;

exports[`save empty documents are respected 1`] = `
"{}
---
{}
---

---
empty: true
---
{}
"
`;

exports[`save empty values are preserved 1`] = `
"i_am_undefined: null
i_am_null: null
empty_array: []
empty_object: {}
"
`;

exports[`save multiple documents 1`] = `
"foo: bar
hello:
  - 1
  - 2
  - 3
---
number: 2
"
`;

exports[`save single document 1`] = `
"foo: bar
hello:
  - 1
  - 2
  - 3
"
`;

exports[`save strings are quoted 1`] = `
"foo: on
bar: this has a \\"big quote\\"
not_a_string: true
"
`;
